fixed cutoff errors from the tiles

--- a/public/css/wishlist.css
+++ b/public/css/wishlist.css
@@ -56,13 +56,11 @@ ul, li {
 }
 
 .left-info {
-	width: 29%;
+	width: 26%;
 	float:left;
 	height: 100%;
-	padding: 5px 0em 0px 0em;
+	padding: 0px 0em 0px 0em;
 	overflow: hidden;
-	padding-left: 6px;
-	padding-left: 8px;
 }
 
 .left-info ul li:first-child {
@@ -83,7 +81,7 @@ ul, li {
 	width: 9.5%;
 	float:left;
 	height: 100%;
-	padding: 5px 10px 0px 0px;
+	padding: 0px 10px 0px 0px;
 }
 
 img {
